implement __copy__ and __deepcopy__. improve __contains__. pep8 and formatting

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,22 @@
 [buildout]
 parts =
     test
+    coverage
     py
-    coverage-test
 
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
-eggs =
-    odict [test]
+eggs = odict[test]
+defaults = ['--auto-color', '--auto-progress']
+
+[coverage]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
 
 [py]
 recipe = zc.recipe.egg
 interpreter = py
 eggs = ${test:eggs}
-
-[coverage-test]
-recipe = zc.recipe.testrunner
-eggs = ${test:eggs}
-defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
