make ready for python 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-/build
-/dist
-/interlude-1.0-py2.6.egg
-/bin
-/eggs
-/.installed.cfg
-/coverage
-/develop-eggs
-/src/odict.egg-info/
 *.pyc
-/parts
 .project
 .pydevproject
-
+/.installed.cfg
+/bin/
+/build/
+/coverage/
+/develop-eggs/
+/dist/
+/eggs/
+/include/
+/interlude-1.0-py2.6.egg
+/lib/
+/local/
+/parts
+/src/odict.egg-info/
