prepare release, make checkmanifest happy

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
+[check-manifest]
+ignore =
+    *.cfg
+    .coveragerc
+    .editorconfig
+    .gitattributes
+    bootstrap.py
+
 [bdist_wheel]
 universal = 1
