--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.4"
+  - "3.5"
+  - "3.6"
+sudo: false
 install:
-  - python bootstrap.py
-  - ./bin/buildout -q
+  - pip install -U pip setuptools zc.buildout
+  - buildout 
 script: ./bin/test
