--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-allow_failures:  
-  - python: "2.6"
-  - python: "3.5"
-  - python: "3.6"
+matrix:
+  allow_failures:  
+    - python: "2.6"
+    - python: "3.5"
+    - python: "3.6"
 sudo: false
 install:
   - pip install -U pip setuptools zc.buildout
