--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
+  - "2.4"
+  - "2.5"
+  - "2.6"
   - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
+  - "pypi"  # PyPy2 2.5.0
+  - "pypy-5.3.1"
 sudo: false
 install:
   - pip install -U pip setuptools zc.buildout
