--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,4 @@ python:
   - "pypy"  # PyPy2 2.5.0
   - "pypy-5.3.1"
 sudo: false
-install:
-  - pip install -U pip setuptools zc.buildout
-  - buildout
-script: ./bin/test
+script: python -m unittest odict.tests
