--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: python
+sudo: false
+
 python:
   #- "2.4"
   #- "2.5"
@@ -9,5 +11,8 @@ python:
   - "3.6"
   - "pypy"  # PyPy2 2.5.0
   - "pypy-5.3.1"
-sudo: false
+
+install:
+    python setup.py install
+
 script: python -m unittest odict.tests
