--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: python
 sudo: false
 
 python:
-  - "2.4"
-  - "2.5"
   - "2.6"
   - "2.7"
+  - "3.2"
+  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
   - "pypy"  # PyPy2 2.5.0
+  - "pypy3"
   - "pypy-5.3.1"
 
 install:
