Minor package polishing

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ develop = .
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = odict[test]
+eggs = odict
 defaults = ['--auto-color', '--auto-progress']
 
 [coverage]
