--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,14 @@ ignore =
     *.cfg
     .coveragerc
     .editorconfig
-    .gitattributes
-    bootstrap.py
+    .gitignore
+    .installed.cfg
+    .project
+    .pydevproject
+    .travis.yml
+    bootstrap.sh
+    buildout.cfg
+    run_tests.sh
 
 [bdist_wheel]
 universal = 1
