Remove --source flag from coverage call in test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,5 +43,5 @@ jobs:
 
       - name: Run coverage
         run: |
-          coverage run --source=src/odict -m odict.tests
+          coverage run -m odict.tests
           coverage report -m --fail-under=100
