--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Install
         run: |
           pip install coverage
-          pip install .
+          pip install -e .
 
       - name: Run tests
         run: |
