Update ignores, manifest and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,2 @@
-[check-manifest]
-ignore =
-    *.cfg
-    .coveragerc
-    .editorconfig
-    .gitignore
-    .installed.cfg
-    .project
-    .pydevproject
-    bootstrap.sh
-    buildout.cfg
-    run_tests.sh
-
-[bdist_wheel]
-universal = 1
+[zest.releaser]
+create-wheel = yes
