--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,4 +44,4 @@ jobs:
       - name: Run coverage
         run: |
           coverage run --source=src/odict --omit=src/odict/bench.py -m odict.tests
-          coverage report -m --fail-under=100
+          coverage report --fail-under=100
