install editable, looks like this is needed for coverage collection

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install
         run: |
           pip install coverage
-          pip install .
+          pip install -e .
 
       - name: Run tests
         run: |
