--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,15 +32,12 @@ jobs:
 
       - name: Install
         run: |
-          pip install coverage
-          pip install -e .
+          make install
 
       - name: Run tests
         run: |
-          python --version
-          python -m odict.tests
+          make test
 
       - name: Run coverage
         run: |
-          coverage run --source=src/odict --omit=src/odict/bench.py -m odict.tests
-          coverage report --fail-under=100
+          make coverage
