--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.egg-info/
 *.pyc
+*odict.*.so
+*odict.c
 /.coverage
 /.mxmake
 /.ruff_cache
+/build
 /dist/
 /htmlcov/
 /requirements-mxdev.txt
 /venv
-/build
