add test optional dependencies where missing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest",
+]
+
 [project.urls]
 Homepage = "https://github.com/conestack/odict"
 
