--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "odict"
-version = "2.0.0"
+version = "2.0.1.dev0"
 description = "Ordered Dictionary."
 dynamic = ["readme"]
 requires-python = ">=3.10"
